<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/about_me" android:title="@string/about_me"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/linear_layout" android:title="@string/linear_layout_fragment"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/relative_layout" android:title="@string/relative_layout_fragment"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/grid_layout" android:title="@string/grid_layout_fragment"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/movie_data" android:title="@string/movie_data_fragment"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/seekbar" android:title="@string/seekbar_fragment"
    android:orderInCategory="100" app:showAsAction="never" />
</menu>
