<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/bgwooden">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:layout_toRightOf="@id/button_1"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:layout_below="@id/button_2"
        android:layout_toRightOf="@id/button_1"/>

    <TextView
        android:id="@+id/text_view_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_1"
        android:layout_marginTop="100dp"
        android:text="@string/user_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/edit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_1"
        android:layout_alignTop="@id/text_view_user"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/edit_text_view"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:layout_below="@id/edit_text_view"
        android:layout_toRightOf="@id/button_1"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:layout_below="@id/button_submit"
        android:layout_toLeftOf="@id/button_submit"/>


</RelativeLayout>